--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "next": "^15.0.3",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "clsx": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
