--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,10 +21,12 @@
     "paths": {
       "@/*": ["./*"],
       "@modules/*": ["./modules/*"],
-      "@shared/*": ["./shared/*"]
+      "@shared/*": ["./shared/*"],
+      "@test-utils/*": ["./src/test-utils/*"],
+      "@test-utils": ["./src/test-utils"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "jest-dom.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
 
